# RobotinoCV

./: .directory  CMakeLists.txt  README.md  edge detection  histogram equalization  lol  main.cpp  templateMatching.cpp  templateMatching.h  templatematching  trial.xml
Cascade trials/: Commands  notes
Cascade trials/Vec Files/: vecfile.vec
Cascade trials/data/: cascade.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml
Cascade trials/data10/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/data11/: Data11command.txt  cascade.xml  datacomand  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/data13/: cascade.xml  data13command.txt  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml
Cascade trials/data14/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/data15/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/data2/: stage0.xml
Cascade trials/data3/: cascade.xml  stage0.xml  stage1.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml
Cascade trials/data4/: cascade.xml  stage1.xml  stage2.xml
Cascade trials/data5/: cascade.xml  stage0.xml  stage3.xml  stage4.xml
Cascade trials/data6/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage20.xml  stage21.xml  stage22.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/data7/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/data8/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/data9/: cascade.xml  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/datapuck2/: cascade.xml  stage10.xml  stage12.xml  stage3.xml  stage6.xml  stage7.xml  stage8.xml
Cascade trials/datapuck3/: stage0.xml  stage1.xml  stage11.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage20.xml  stage21.xml  stage22.xml  stage23.xml  stage4.xml  stage5.xml  stage9.xml
Cascade trials/datapuck4/: stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
Cascade trials/datarobotino1/: stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage2.xml  stage3.xml  stage4.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml  stage9.xml
api2/: AnalogInput.h  AnalogInputArray.h  Bumper.h  Camera.h  CameraCapabilities.h  Charger.h  Com.h  ComId.h  ComObject.h  CompactBHA.h  CustomMessage.h  DigitalInput.h  DigitalInputArray.h  DigitalOutput.h  DigitalOutputArray.h  DistanceSensor.h  DistanceSensorArray.h  ElectricalGripper.h  EncoderInput.h  Fleetcom.h  FleetcomPair.h  Grappler.h  Gyroscope.h  InitialPose.h  Kinect.h  LaserRangeFinder.h  LaserRangeFinderReadingsShared.h  Mapping.h  Motor.h  MotorArray.h  NavGoal.h  Navigation.h  NorthStar.h  Odometry.h  OmniDrive.h  OmniDriveModel.h  PowerButton.h  PowerManagement.h  PowerOutput.h  QtGrapplerReadings.h  (+6 more)
api2/c/: AnalogInput.h  Com.h  (+21 more)
methods sources/: Assignment.py  Face detection  IPcam  PR detection  RPdetection.py  Robotino detection with cam  backup  car detection 2  car detection cpp  cascadetrial  object marker 1  robotino detection
package_bgs/: FrameDifferenceBGS.cpp
robocascade/: README.md  notes.md  notes.txt  objectmarker.py  objectmarker1.py  positive.txt  samples.txt  vecfile.vec
robotinoFiles/: joywithcam1.rvw2  robotino-api2_0.9.16_amd64.deb
(+21 files in other folders)
