    cmake_minimum_required(VERSION 3.3)
    project(RobotinoCV)

    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    find_package(OpenCV REQUIRED)
    include_directories(${OpenCV_INCLUDE_DIRS})
    link_directories(${OpenCV_INCLUDE_DIRS})
    add_definitions(${OpenCV_DEFINITIONS})
    set(SOURCE_FILES main.cpp)
    add_executable(RobotinoCV ${SOURCE_FILES})
    target_link_libraries(RobotinoCV ${OpenCV_LIBS})
    include_directories(${/home/ahmed/RobotinoCV}/opencv)
